# SOGL

./: .gitignore  CHANGELOG.md  README.md  lint.py  pyproject.toml
.github/workflows/: psv.yaml  release.yaml  sv.yaml
describerr/: describerr.py
tests/: conftest.py  test_describerr.py
tests/resources/: CHANGELOG.md  git_log.txt
